--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "json-server": "^0.14.0",
     "lint-staged": "7.2.2",
     "prettier-eslint-cli": "4.7.1",
+    "redux-mock-store": "^1.5.3",
     "webpack": "4.18.0",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.8",
